README and CHANGELOG finished, ready to submit

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -788,3 +788,34 @@
 4/5/16 testing
 4/5/16 Done
 4/5/16 README and CHANGELOG finished, ready to submit 
+
+1.09
+4/10/16 Started project
+4/10/16 Updating combat and movements
+4/10/16 Fixing errors
+4/10/16 testing
+4/11/16 Updating messages
+4/11/16 testing
+4/11/16 sending combat messages
+4/11/16 fixing errors
+4/11/16 testing
+4/11/16 fixing errors
+4/11/16 Pick up items
+4/11/16 fixing errors
+4/11/16 testing
+4/11/16 fixing errors
+4/11/16 Drawing inventory
+4/11/16 testing
+4/11/16 Expanding item helper functions
+4/12/16 Making helper dialog box function
+4/12/16 implementing dialog actions
+4/12/16 testing
+4/12/16 fixing errors
+4/12/16 fixing errors
+4/12/16 Displaying items that are available for actions
+4/12/16 fixing errors
+4/12/16 testing
+4/12/16 Rolling damage for all equip equipments
+4/12/16 Applying speed from equipments
+4/12/16 Done
+4/12/16 README and CHANGELOG finished, ready to submit 
